<resources>
    <string name="app_name">AndroidFitnessApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_logs">Logs</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_exercises">Exercises</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="my_exercises">My Exercises</string>
    <string name="add_a_custom_exercise">Add a custom exercise</string>
    <string name="save">Save</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="name">Name</string>
    <string name="cancel">cancel</string>
    <string name="ok">OK</string>
    <string name="confirm_delete_exercise">Are you sure you want to delete this exercise?</string>
    <string name="title_workout_template">Workout Template</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="channel_name">\"Test Name\"</string>
    <string name="channel_description">\"Test Description\"</string>
    <string name="title_log">Workout Log</string>
    <string name="title_choose_exercise">Choose an exercise</string>
    <string name="error_occurred_the_server_might_be_down_please_try_again_later">Error occurred. The server might be down. Please try again later</string>
</resources>